--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "scripts": {
     "build": "next build",
     "dev": "next dev",
+    "pages:build": "next-on-pages build",
+    "pages:deploy": "next-on-pages deploy",
     "lint": "next lint",
     "start": "next start"
   },
@@ -67,6 +69,7 @@
     "@types/nodemailer": "^6.4.17",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "next-on-pages": "^0.1.6",
     "postcss": "^8.5",
     "tailwindcss": "^3.4.17",
     "typescript": "^5"
