--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "build": "next build",
     "dev": "next dev",
-    "pages:build": "next-on-pages build",
+    "pages:build": "next-on-pages",
     "pages:deploy": "next-on-pages deploy",
     "lint": "next lint",
     "start": "next start"
@@ -65,11 +65,11 @@
     "zod": "^3.24.1"
   },
   "devDependencies": {
+    "@cloudflare/next-on-pages": "^0.4.2",
     "@types/node": "^22",
     "@types/nodemailer": "^6.4.17",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "next-on-pages": "^0.1.6",
     "postcss": "^8.5",
     "tailwindcss": "^3.4.17",
     "typescript": "^5"
