--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "build": "next build",
     "dev": "next dev",
-    "pages:build": "next-on-pages",
+    "pages:build": "next build && npx @cloudflare/next-on-pages",
     "pages:deploy": "next-on-pages deploy",
     "lint": "next lint",
     "start": "next start"
